# speedshifter

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  TODO.md  icon.icns  install.sh  org.kde.speedshifter.desktop  org.speedshifter.desktop  run.sh  speedshifter.kdev4
.github/workflows/: cmake-multi-platform.yml
.kdev4/: speedshifter.kdev4
src/: .player.cpp.kate-swp  CMakeLists.txt  Main.qml  main.cpp  player.cpp  player.h  qtquickcontrols2.conf  speedshifter.qrc  timer.cpp  timer.h
src/qml/: Main.qml
